Corrected a bug in the page shell (was 1275px instead of 1200px). Fixed the alignment of the signed in state of of the top level nav. [Amends #4]

--- a/_scss/base/var/_layout.scss
+++ b/_scss/base/var/_layout.scss
@@ -1,4 +1,4 @@
 // Layout variables
 
-$site-max-width:    75em; // 1200px
-$text-max-width:    62rem;
+$site-max-width:    rem(1200px);
+$text-max-width:    rem(620px);
