--- a/css/layouts/documentation.css
+++ b/css/layouts/documentation.css
@@ -434,7 +434,7 @@ html {
 
 .styleguide-content {
   margin-bottom: 5em;
-  max-width: 75em;
+  max-width: 120rem;
   padding-left: 2em;
   padding-right: 2em;
   position: relative;
