--- a/css/usajobs-design-system-base.css
+++ b/css/usajobs-design-system-base.css
@@ -5008,7 +5008,7 @@ html {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 75em;
+  max-width: 120rem;
   background: #ffffff;
 }
 
@@ -5095,7 +5095,7 @@ html {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 75em;
+  max-width: 120rem;
 }
 
 .usajobs-grid::after,
